fixing share link overlapping

--- a/app/assets/stylesheets/root.css.less
+++ b/app/assets/stylesheets/root.css.less
@@ -162,6 +162,7 @@
       padding-right: 0px;
       div {
         display:inline-block;
+        text-align: left;
       }
     } 
   }
